fix(angular): remove gap from channel list (#314)
### 🎯 Goal

_Describe why we are making this change_

### 🛠 Implementation details

_Provide a description of the implementation_

### 🎨 UI Changes

_Add relevant screenshots_

Make sure to test with both Angular and React (with both `MessageList`
and `VirtualizedMessageList` components) SDKs

--- a/src/v2/styles/ChannelList/ChannelList-layout.scss
+++ b/src/v2/styles/ChannelList/ChannelList-layout.scss
@@ -34,6 +34,10 @@
       @include utils.flex-row-center;
     }
   }
+
+  .stream-chat__paginated-list {
+    gap: 0;
+  }
 }
 
 .str-chat__channel-list-react {
